crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__op_section_multiply.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "Code:\n\n(*)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Op(
        "*",
    ),
}
