crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__provide_simple.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "provide Db = fakeDb() { run() }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 32,
        },
    },
    value: Provide {
        name: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "Db",
                },
            ],
        },
        value: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: Var(
                        "fakeDb",
                    ),
                },
                arguments: [],
            },
        },
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 23,
                },
                end: Position {
                    line: 1,
                    column: 32,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 25,
                            },
                            end: Position {
                                line: 1,
                                column: 30,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 25,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 28,
                                    },
                                },
                                value: Var(
                                    "run",
                                ),
                            },
                            arguments: [],
                        },
                    },
                ),
            },
        },
    },
}
